# zentroai-forge

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: .env.example  README.md  pyproject.toml
backend/examples/: router_flow.json  sample_flow.json  simple_llm_flow.json
backend/examples/schemas/: handoff_input.schema.json  handoff_output.schema.json
backend/src/agent_compiler/: __init__.py  config.py  database.py  main.py  middleware.py  migrations.py
backend/src/agent_compiler/adapters/: __init__.py  base.py  langchain_adapter.py  llamaindex_adapter.py  registry.py
backend/src/agent_compiler/export/: __init__.py  generate_tools.py
backend/src/agent_compiler/export_lock_templates/: README.md  api_server.meta.json  aws-ecs.meta.json  langgraph-http-aws-ecs.meta.json  langgraph.meta.json  runtime.meta.json
backend/src/agent_compiler/ir/: __init__.py  validate.py
backend/src/agent_compiler/model_registry/: __init__.py  adapters.py  schemas.py  service.py
backend/src/agent_compiler/models/: __init__.py  credentials.py  db.py  ir.py  ir_v2.py  ir_v2_1_defaults.py  ir_v2_to_v2_1.py
backend/src/agent_compiler/observability/: __init__.py  logging.py  tracing.py
backend/src/agent_compiler/routers/: __init__.py  agents.py  credentials.py  debug.py  evals.py  exports.py  flows.py  gitops.py  integrations_library.py  logs.py  providers.py  runs.py  templates.py  tools.py
backend/tests/: __init__.py  test_config.py  test_eval.py  test_export.py  test_ir_v21_compat.py  test_ir_validation.py  test_langgraph_export.py  test_multiagent_runtime.py  test_parallel_join.py  test_pr3_evals.py  test_preview.py  test_replay.py  test_router_guard.py  test_run_events.py  test_templates.py  test_tool_contracts.py  test_tool_security.py
docs/: API.md  ARCHITECTURE.md  (+5 more)
(+211 files in other folders)
