[project]
name = "agent-compiler-backend"
version = "0.1.0"
description = "Agent Compiler Backend - Build, run, and export AI agent flows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Compiler Team" }]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "httpx>=0.26.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.20",
]
llamaindex = [
    "llama-index>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
]
engines = [
    "agent-compiler-backend[langchain,llamaindex]",
]
otel = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]
all = [
    "agent-compiler-backend[engines,otel,dev]",
]

[project.scripts]
agent-compiler = "agent_compiler.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_compiler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
